Fixed code and post overflow

--- a/myblog/static/code_style.css
+++ b/myblog/static/code_style.css
@@ -72,3 +72,9 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 .codehilite .vi { color: #19177C } /* Name.Variable.Instance */
 .codehilite .vm { color: #19177C } /* Name.Variable.Magic */
 .codehilite .il { color: #666666 } /* Literal.Number.Integer.Long */
+
+/* Custom */
+.codehilite {
+    overflow: scroll;
+    padding: 0 0.5em;
+}
