--- a/myblog/static/post_style.css
+++ b/myblog/static/post_style.css
@@ -6,7 +6,6 @@
 
 /* Article */
 .post_article > header {
-	display: flex;
 	align-items: last baseline;
 	border-bottom: 1px solid lightgray;
 }
@@ -33,9 +32,7 @@
 }
 
 .post_main {
-	display: block;
-	width: 100%;
-	height: 100%;
+	overflow: auto;
 	padding: 0 0.6em;
 }
 
@@ -50,7 +47,7 @@
 
 .post_body > p {
 	white-space: pre-line;
-	word-wrap: anywhere;
+	word-wrap: normal;
 }
 
 .post_body h1 {
